--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "description": "The API service for the Macy's Random Instagram Pizza Picker application",
   "main": "server.js",
   "scripts": {
+    "build": "netlify deploy --prod",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "repository": {
