--- a/package.json
+++ b/package.json
@@ -16,5 +16,11 @@
   "bugs": {
     "url": "https://github.com/Programazing/MacysRandomInstagramPizzaPicker.API/issues"
   },
-  "homepage": "https://github.com/Programazing/MacysRandomInstagramPizzaPicker.API#readme"
+  "homepage": "https://github.com/Programazing/MacysRandomInstagramPizzaPicker.API#readme",
+  "dependencies": {
+    "express": "^4.18.2",
+    "netlify-cli": "^13.0.1",
+    "netlify-lambda": "^2.0.16",
+    "serverless-http": "^3.1.1"
+  }
 }
