--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
   "homepage": "https://github.com/Programazing/MacysRandomInstagramPizzaPicker.API#readme",
   "dependencies": {
     "express": "^4.18.2",
+    "netlify": "^13.1.2",
     "netlify-cli": "^13.0.1",
     "netlify-lambda": "^2.0.16",
     "serverless-http": "^3.1.1"
