--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
   },
   "homepage": "https://github.com/Programazing/MacysRandomInstagramPizzaPicker.API#readme",
   "dependencies": {
+    "cors": "^2.8.5",
     "express": "^4.18.2",
     "netlify": "^13.1.2",
     "netlify-cli": "^13.0.1",
